--- a/CssFiles/Main/Main2.css
+++ b/CssFiles/Main/Main2.css
@@ -1,17 +1,18 @@
 .main2{
     width: 100%;
-    height: 100vh;
+    height: auto;
     /* background-color: red; */
     display: flex;
     justify-content: center;
     /* background: url(); */
     margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .main2Coverer{
     width: 80%;
     /* background-color: blue; */
-    height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     gap: 60px;
