--- a/CssFiles/Main/Main5.css
+++ b/CssFiles/Main/Main5.css
@@ -1,16 +1,17 @@
 .main5{
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: flex;
     justify-content: center;
 }
 
 .main5Coverer{
     width: 80%;
-    height: 50vh;
+    height: auto;
     /* background-color: pink; */
     overflow: hidden;
     position: relative;
+    margin-top: 100px;
 }
 
 
