--- a/CssFiles/Main/Main5.css
+++ b/CssFiles/Main/Main5.css
@@ -3,6 +3,9 @@
     height: auto;
     display: flex;
     justify-content: center;
+    /* background-color:green; */
+       position: relative;
+       
 }
 
 .main5Coverer{
@@ -10,8 +13,11 @@
     height: auto;
     /* background-color: pink; */
     overflow: hidden;
-    position: relative;
+ 
+    padding-bottom: 100px;
     /* margin-top: 0px; */
+        /* background-color:blue; */
+
 }
 
 
@@ -40,14 +46,14 @@ color: white;
 position: absolute;
 font-size: 20px;
 top: 50%;
-
+left: 100px;
 }
 
 .main5CovererContainer2RightArrowSlide{
     color: white;
     position: absolute;
     font-size: 20px;
-    right: 0;
+    right: 100px;
     top: 50%;
    
 }
@@ -56,9 +62,11 @@ top: 50%;
 
 
 .main5CovererContainer2Box1{
+    width: 80vw;
 display: flex;
 flex-direction: column;
 gap: 20px;
+/* border: 1px solid black; */
 }
 
 .main5CovererContainer2Box1Content{
